@@ -1,3 +1,5 @@
+- properly insert/lock pieces if dropping more than one tile (2024/02/17 MS)
+
 1.2.7:
 - use SDL_CONFIG instead of sdl_config (2023/09/04 Artemys)
 - added compile, removed intl and acinclude.m4 (2023/09/04 MS)
